--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,25 @@ jobs:
 
     - name: Build
       run: ./build-all.sh
-      
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4.3.3
+
+    - name: Create Release
+      id: create_release
+      uses: actions/upload-artifact@v4
       with:
-        name: pong-linux
-        path: pong/build/
+          name: pong-linux-amd64
+          path: ./build/pong-linux-amd64
+      
+    - uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.artifact-url }}
+        asset_path: ./build/pong-linux-amd64
+        asset_name: pong-linux-amd64
+        asset_content_type: application/octet-stream
+
+    - uses: eregon/publish-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: latest
