--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,26 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-linux:
+  test-and-build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go 1.20
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.20
+      id: go
+
+    - name: Test
+      run: go test -v ./...
+
+    - name: Build
+      run: go build -v ./...
+  
+  build-linux-and-web:
+    needs: [test-and-build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -25,18 +44,15 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Test
-      run: go test -v ./...
-
     - name: Build
       run: ./build-all.sh
 
     - name: Upload linux build artifact
-      id: upload_linux_amd64_artifacts
+      id: upload_linux_artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build-linux-amd64
-        path: ./build/pong-linux-amd64
+        name: build-linux
+        path: ./build/pong-linux
 
     - name: Upload web build artifact
       id: upload_web_artifacts
@@ -45,8 +61,71 @@ jobs:
         name: build-web-wasm
         path: ./build/pong-web-wasm.zip
 
+  build-windows:
+    needs: [test-and-build]
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+
+    - name: Build
+      run: ./build-all.sh
+
+    - name: Upload windows build artifact
+      id: upload_windows_artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-windows
+        path: ./build/pong-windows.exe
+        
+    build-macos-intel:
+      needs: [test-and-build]
+      runs-on: macos-13
+      steps:
+        - uses: actions/checkout@v4
+          
+        - name: Set up Go
+          uses: actions/setup-go@v4
+          with:
+            go-version: '1.20'
+            
+        - name: Build
+          run: ./build-all.sh
+          
+        - name: Upload macos-intel build artifact
+          id: upload_macos_intel_artifacts
+          uses: actions/upload-artifact@v4
+          with:
+              name: build-macos-intel
+              path: ./build/pong-macos-intel
+
+  build-macos-apple-silicon:
+    needs: [test-and-build]
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+
+      - name: Build
+        run: ./build-all.sh
+
+      - name: Upload macos-arm build artifact
+        id: upload_macos_arm_artifacts
+        uses: actions/upload-artifact@v4
+        with:
+            name: build-macos-apple-silicon
+            path: ./build/pong-macos-apple-silicon
+
   release:
-    needs: [build-linux]
+    needs: [build-linux, build-windows, build-macos-intel, build-macos-apple-silicon]
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
@@ -60,10 +139,10 @@ jobs:
           gh auth status
           gh release delete latest || true
 
-      - name: Download pong-linux-amd64 artifacts
+      - name: Download pong-linux artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-linux-amd64
+          name: build-linux
           path: ./build/
           merge-multiple: true
 
@@ -84,7 +163,7 @@ jobs:
         run: |
           gh auth status
           gh release create latest --title "Pong - latest" --notes "Find the latest release of pong that matches your platform"
-          gh release upload latest ./build/pong-linux-amd64
+          gh release upload latest ./build/pong-linux
           gh release upload latest ./build/pong-web-wasm.zip
           gh release view latest
           gh release edit latest --draft=false
