--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,19 @@ on:
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
-    - name: Set up Go 1.20
-      uses: actions/setup-go@v2
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install libasound2-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.20
-      id: go
+        go-version: '1.20'
+
 
     - name: Test
       run: go test -v ./...
@@ -40,12 +44,12 @@ jobs:
         sudo apt-get install libasound2-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.20'
 
     - name: Build
-      run: ./build-all.sh
+      run: ./build-all-posix.sh
 
     - name: Upload linux build artifact
       id: upload_linux_artifacts
@@ -68,12 +72,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.20'
 
     - name: Build
-      run: ./build-all.sh
+      run: go build -o build/pong-windows.exe .
 
     - name: Upload windows build artifact
       id: upload_windows_artifacts
@@ -82,40 +86,56 @@ jobs:
         name: build-windows
         path: ./build/pong-windows.exe
         
-    build-macos-intel:
-      needs: [test-and-build]
-      runs-on: macos-13
-      steps:
-        - uses: actions/checkout@v4
-          
-        - name: Set up Go
-          uses: actions/setup-go@v4
-          with:
-            go-version: '1.20'
-            
-        - name: Build
-          run: ./build-all.sh
-          
-        - name: Upload macos-intel build artifact
-          id: upload_macos_intel_artifacts
-          uses: actions/upload-artifact@v4
-          with:
-              name: build-macos-intel
-              path: ./build/pong-macos-intel
-
-  build-macos-apple-silicon:
+  build-macos-intel:
     needs: [test-and-build]
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.20'
 
+      - name: Install xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Check if C Compiler is installed
+        run: clang --version
+
       - name: Build
-        run: ./build-all.sh
+        run: ./build-all-posix.sh
+
+      - name: Upload macos-intel build artifact
+        id: upload_macos_intel_artifacts
+        uses: actions/upload-artifact@v4
+        with:
+            name: build-macos-intel
+            path: ./build/pong-macos-intel
+
+  build-macos-apple-silicon:
+    needs: [test-and-build]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.20'
+
+      - name: Install xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Check if C Compiler is installed
+        run: clang --version
+
+      - name: Build
+        run: ./build-all-posix.sh
 
       - name: Upload macos-arm build artifact
         id: upload_macos_arm_artifacts
@@ -125,7 +145,7 @@ jobs:
             path: ./build/pong-macos-apple-silicon
 
   release:
-    needs: [build-linux, build-windows, build-macos-intel, build-macos-apple-silicon]
+    needs: [build-linux-and-web, build-windows, build-macos-intel, build-macos-apple-silicon]
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
@@ -153,6 +173,27 @@ jobs:
           path: ./build/
           merge-multiple: true
 
+      - name: Download pong-windows artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-windows
+          path: ./build/
+          merge-multiple: true
+
+      - name: Download pong-macos-intel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-macos-intel
+          path: ./build/
+          merge-multiple: true
+
+      - name: Download pong-macos-apple-silicon artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-macos-apple-silicon
+          path: ./build/
+          merge-multiple: true
+
       - name: Show all downloaded artifacts
         run: ls -R
 
@@ -165,5 +206,8 @@ jobs:
           gh release create latest --title "Pong - latest" --notes "Find the latest release of pong that matches your platform"
           gh release upload latest ./build/pong-linux
           gh release upload latest ./build/pong-web-wasm.zip
+          gh release upload latest ./build/pong-windows.exe
+          gh release upload latest ./build/pong-macos-intel
+          gh release upload latest ./build/pong-macos-apple-silicon
           gh release view latest
           gh release edit latest --draft=false
